Fixed API Registration, Login, Users and swagger schema
