# api/api_v1/authapp/serializers.py
@@ -6,16 +6,30 @@ from api_v1.exceptions import UniteamsAPIException
 from authapp.models import UniteamsUser
 
 
-class UniteamsUsersSerializer(serializers.HyperlinkedModelSerializer):
+class UniteamsUsersSerializer(serializers.ModelSerializer):
+    # token = serializers.CharField(max_length=512, write_only=True)
+    #
+    # def validate_token(self, value):
+    #     model_class = self.Meta.model
+    #     user = model_class.objects.filter(token=value)
+    #     print(user)
+    #     if not model_class.objects.filter(token=value).exists():
+    #         raise UniteamsAPIException(**errorcodes.ERR_TOKEN_NOT_SEARCH_USER)
+    #     if len(value) < 3 or len(value) > 512:
+    #         print(len(value), value)
+    #         raise UniteamsAPIException(**errorcodes.ERR_WRONG_TOKEN)
+    #     return value
+
     class Meta:
         model = UniteamsUser
-        fields = ['url', 'username', 'email', 'groups']
+        fields = ['token']
 
 
 class RegistrationSerializer(serializers.ModelSerializer):
     password = serializers.CharField(write_only=True)
     username = serializers.CharField(write_only=True)
     email = serializers.CharField(write_only=True)
+
     # token = serializers.CharField(max_length=255, read_only=True)
 
     def validate_username(self, value):
@@ -28,6 +42,7 @@ class RegistrationSerializer(serializers.ModelSerializer):
 
     @staticmethod
     def validate_password(value):
+        # TODO Provide to checking a password
         # if len(value) != 64:
         #     raise UniteamsAPIException(**errorcodes.ERR_WRONG_PASSWORD)
         return value
@@ -63,5 +78,6 @@ class LoginSerializer(serializers.Serializer):
             raise UniteamsAPIException(**errorcodes.ERR_WRONG_LOGIN_OR_PASSWRD)
 
         return {
-            'token': user.token
+            'access_token': user.token,
+            "token_type": "Bearer",
         }
